# yggdrasil-ng

./: README.md
.github/workflows/: release-windows-rebuild.yml  release.yml
contrib/deb/: postinst
contrib/systemd/: yggdrasil.service
crates/ironwood/src/: peers.rs
crates/ironwood/src/encrypted/: session.rs
crates/yggdrasil/: Cargo.toml
crates/yggdrasil-mobile/: Cargo.toml
crates/yggdrasil-mobile/kotlin-bindings/uniffi/yggdrasil_mobile/: yggdrasil_mobile.kt
crates/yggdrasil-mobile/src/: lib.rs  mobile.rs  yggdrasil_mobile.udl
crates/yggdrasil/src/: ckr.rs  config.rs  config_template.toml  core.rs  ipv6rwc.rs  lib.rs  links.rs  main.rs  multicast.rs  tun.rs
crates/yggdrasil/src/transport/: mod.rs  quic.rs  ws.rs
