[package]
name = "yggdrasil-mobile"
version = "0.1.0"
edition = "2024"
description = "Mobile FFI layer for Yggdrasil-ng"
license = "MPL-2.0"

[lib]
name = "yggdrasil_mobile"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
yggdrasil = { path = "../yggdrasil", default-features = false, features = ["ckr"] }
ironwood = { path = "../ironwood" }
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.31.0", features = ["build", "cli"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
thiserror = "2"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
test = false
